k8s-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-oprekan
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: nginx
                  image: nginx:1.25
                  ports:
                    - containerPort: 80
