k8s-Create-svc-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
    name: access
spec:
    type: ClusterIP
    selector:
        app: nginx
    ports:
        - port: 8080
          targetPort: 80
          protocol: TCP
