k8s-create-svc-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: access
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
