k8s-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-access
spec:
    rules:
    - host: k8s.bagasproject.my.id
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: access
                port:
                    number: 8080
